# sql-hw

./: .gitignore  CMakeLists.txt  README.md  main.cpp  task1.md
clickhouse-impl/include/: books-clickhouse.h  people-clickhouse.h  school-clickhouse.h
clickhouse-impl/src/: books-clickhouse.cpp  people-clickhouse.cpp  school-clickhouse.cpp
soci-postgres/include/: books-soci.h  people-soci.h  school-soci.h
soci-postgres/src/: books-soci.cpp  people-soci.cpp  school-soci.cpp
